--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -18,7 +18,8 @@
   "content_scripts": [
     {
       "matches": ["https://leetcode.com/problems/*"],
-      "js": ["content-scripts/leetcode.js"]
+      "js": ["content-scripts/leetcode.js"],
+      "run_at": "document_idle"
     }
   ]
 }
