--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -55,6 +55,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId> <!-- ✅ Right -->
+			<artifactId>commons-codec</artifactId>
+			<version>1.16.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
