added work with the setuo of docker image

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=Backend
-spring.datasource.url=jdbc:postgresql://localhost:5432/AlgoGit
-spring.datasource.username=postgres
-spring.datasource.password=sabari.m6369
+##spring.datasource.url=jdbc:postgresql://localhost:5432/AlgoGit
+#spring.datasource.username=postgres
+#spring.datasource.password=sabari.m6369
+
+spring.datasource.url=jdbc:postgresql://ep-fancy-leaf-ae2h4uqg-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channelBinding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_yBgkPU2w3ifZ
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.data-source-properties.ssl=true
