Added option for geeks for geeks

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -20,7 +20,12 @@
       "matches": ["https://leetcode.com/problems/*"],
       "js": ["content-scripts/leetcode.js"],
       "run_at": "document_idle"
-    }
+    },
+     {
+    "matches": ["https://practice.geeksforgeeks.org/problems/*",  "https://www.geeksforgeeks.org/problems/*"],
+    "js": ["content-scripts/gfg.js"],
+    "run_at": "document_idle"
+  }
   ],
    "host_permissions": [
     "https://github.com/*"
