before changing for firefox

--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -10,9 +10,10 @@
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "icons/icon1.png",
-      "48": "icons/icon2.png",
-      "128": "icons/icon2.png"
+       "16": "icons/AlgoGit.png",
+    "32": "icons/AlgoGit.png",
+    "48": "icons/AlgoGit.png",
+    "128": "icons/AlgoGit.png"
     }
   },
   "content_scripts": [
